Improve script execution logic by adding checks for start-params.sh and fallback to shaded JAR